mule-user-guide/v/3.6/_toc.adoc
// Mule User Guide 3.6 TOC File

* link:/mule-fundamentals/v/3.6/index[Mule User Guide]
** link:/mule-user-guide/v/3.6/hardware-and-software-requirements[Hardware and Software Requirements]
** link:/mule-user-guide/v/3.6/compatibility[Compatibility]
** link:/mule-user-guide/v/3.6/downloading-and-starting-mule-esb[Downloading and Starting Mule ESB]
** link:/mule-user-guide/v/3.6/adding-community-runtime[Adding Community Runtime]
** link:/mule-user-guide/v/3.6/installing-an-enterprise-license[Installing an Enterprise License]
** link:/mule-user-guide/v/3.6/installing-extensions[Installing Extensions]
** link:/mule-user-guide/v/3.6/studio-update-sites[Studio Update Sites]
** link:/mule-user-guide/v/3.6/studio-in-eclipse[Studio in Eclipse]
** link:/mule-user-guide/v/3.6/developing[Developing]
*** link:/mule-user-guide/v/3.6/anypoint-connectors[Anypoint Connectors]
**** link:/mule-user-guide/v/3.6/connectors-user-guide[Connectors User Guide]
***** link:/mule-user-guide/v/3.6/installing-connectors[Installing Connectors]
***** link:/mule-user-guide/v/3.6/connector-configuration-reference[Connector Configuration Reference]
***** link:/mule-user-guide/v/3.6/working-with-multiple-versions-of-connectors[Working with Multiple Versions of Connectors]
***** link:/mule-user-guide/v/3.6/using-a-connector-to-access-an-oauth-api[Using a Connector to Access an OAuth API]
***** link:/mule-user-guide/v/3.6/auto-paging-in-anypoint-connectors[Auto-Paging in Anypoint Connectors]
**** link:/mule-user-guide/v/3.6/ajax-connector[Ajax Connector]
**** link:/mule-user-guide/v/3.6/amqp-connector[AMQP Connector]
***** link:/mule-user-guide/v/3.6/amqp-connector-examples[AMQP Connector Examples]
***** link:/mule-user-guide/v/3.6/amqp-connector-reference[AMQP Connector Reference]
**** link:/mule-user-guide/v/3.6/cassandra-connector[Cassandra Connector]
**** link:/mule-user-guide/v/3.6/cmis-connector[CMIS Connector]
**** link:/mule-user-guide/v/3.6/concur-connector[Concur Connector]
**** link:/mule-user-guide/v/3.6/database-connector[Database Connector]
***** link:/mule-user-guide/v/3.6/database-connector-examples[Database Connector Examples]
***** link:/mule-user-guide/v/3.6/database-connector-reference[Database Connector Reference]
**** link:/mule-user-guide/v/3.6/dotnet-connector-guide[DotNet Connector Guide]
***** link:/mule-user-guide/v/3.6/dotnet-connector-user-guide[DotNet Connector User Guide]
***** link:/mule-user-guide/v/3.6/dotnet-connector-migration-guide[DotNet Connector Migration Guide]
***** link:/mule-user-guide/v/3.6/dotnet-connector-faqs[DotNet Connector FAQs]
**** link:/mule-user-guide/v/3.6/file-connector[File Connector]
**** link:/mule-user-guide/v/3.6/ftp-connector[FTP Connector]
**** link:/mule-user-guide/v/3.6/generic-connector[Generic Connector]
**** link:/mule-user-guide/v/3.6/hdfs-connector[HDFS Connector]
**** link:/mule-user-guide/v/3.6/http-connector[HTTP Connector]
***** link:/mule-user-guide/v/3.6/http-listener-connector[HTTP Listener Connector]
***** link:/mule-user-guide/v/3.6/http-request-connector[HTTP Request Connector]
***** link:/mule-user-guide/v/3.6/authentication-in-http-requests[Authentication in HTTP Requests]
***** link:/mule-user-guide/v/3.6/tls-configuration[TLS Configuration]
***** link:/mule-user-guide/v/3.6/migrating-to-the-new-http-connector[Migrating to the New HTTP Connector]
**** link:/mule-user-guide/v/3.6/http-connector-deprecated[HTTP Connector - Deprecated]
**** link:/mule-user-guide/v/3.6/imap-connector[IMAP Connector]
**** link:/mule-user-guide/v/3.6/jdbc-connector[JDBC Connector]
**** link:/mule-user-guide/v/3.6/microsoft-dynamics-ax-2012-connector[Microsoft Dynamics AX 2012 Connector]
**** link:/mule-user-guide/v/3.6/microsoft-dynamics-crm-connector[Microsoft Dynamics CRM Connector]
**** link:/mule-user-guide/v/3.6/microsoft-service-bus-connector[Microsoft Service Bus Connector]
***** link:/mule-user-guide/v/3.6/microsoft-service-bus-connector-faq[Microsoft Service Bus Connector FAQ]
**** link:/mule-user-guide/v/3.6/microsoft-sharepoint-2013-connector[Microsoft SharePoint 2013 Connector]
**** link:/mule-user-guide/v/3.6/microsoft-sharepoint-2010-connector[Microsoft SharePoint 2010 Connector]
**** link:/mule-user-guide/v/3.6/msmq-connector[MSMQ Connector]
***** link:/mule-user-guide/v/3.6/msmq-connector-user-guide[MSMQ Connector User Guide]
***** link:/mule-user-guide/v/3.6/windows-gateway-services-guide[Windows Gateway Services Guide]
***** link:/mule-user-guide/v/3.6/msmq-connector-faqs[MSMQ Connector FAQs]
**** link:/mule-user-guide/v/3.6/netsuite-connector[NetSuite Connector]
**** link:/mule-user-guide/v/3.6/oracle-e-business-suite-connector[Oracle E-Business Suite Connector]
**** link:/mule-user-guide/v/3.6/peoplesoft-connector[PeopleSoft Connector]
**** link:/mule-user-guide/v/3.6/pop3-connector[POP3 Connector]
**** link:/mule-user-guide/v/3.6/quartz-connector[Quartz Connector]
**** link:/mule-user-guide/v/3.6/salesforce-analytics-cloud-connector[Salesforce Analytics Cloud Connector]
**** link:/mule-user-guide/v/3.6/salesforce-connector[Salesforce Connector]
***** link:/mule-user-guide/v/3.6/salesforce-connector-reference[Salesforce Connector Reference]
***** link:/mule-user-guide/v/3.6/salesforce-connector-authentication[Salesforce Connector Authentication]
***** link:/mule-user-guide/v/3.6/salesforce-contact-aggregation-example[Salesforce Contact Aggregation Example]
**** link:/mule-user-guide/v/3.6/sap-connector[SAP Connector]
**** link:/mule-user-guide/v/3.6/servicenow-connector[ServiceNow Connector]
**** link:/mule-user-guide/v/3.6/servlet-connector[Servlet Connector]
**** link:/mule-user-guide/v/3.6/sftp-connector[SFTP Connector]
**** link:/mule-user-guide/v/3.6/siebel-connector[Siebel Connector]
**** link:/mule-user-guide/v/3.6/web-service-consumer[Web Service Consumer]
***** link:/mule-user-guide/v/3.6/web-service-consumer-reference[Web Service Consumer Reference]
**** link:/mule-user-guide/v/3.6/windows-powershell-connector-guide[Windows PowerShell Connector Guide]
**** link:/mule-user-guide/v/3.6/wmq-connector[WMQ Connector]
**** link:/mule-user-guide/v/3.6/workday-connector[Workday Connector]
*** link:/mule-user-guide/v/3.6/message-processors[Message Processors]
**** link:/mule-user-guide/v/3.6/components[Components]
***** link:/mule-user-guide/v/3.6/configuring-components[Configuring Components]
***** link:/mule-user-guide/v/3.6/configuring-java-components[Configuring Java Components]
***** link:/mule-user-guide/v/3.6/developing-components[Developing Components]
***** link:/mule-user-guide/v/3.6/entry-point-resolver-configuration-reference[Entry Point Resolver Configuration Reference]
***** link:/mule-user-guide/v/3.6/component-bindings[Component Bindings]
***** link:/mule-user-guide/v/3.6/using-interceptors[Using Interceptors]
***** link:/mule-user-guide/v/3.6/cxf-component-reference[CXF Component Reference]
***** link:/mule-user-guide/v/3.6/echo-component-reference[Echo Component Reference]
***** link:/mule-user-guide/v/3.6/expression-component-reference[Expression Component Reference]
***** link:/mule-user-guide/v/3.6/flow-reference-component-reference[Flow Reference Component Reference]
***** link:/mule-user-guide/v/3.6/http-static-resource-handler[HTTP Static Resource Handler]
***** link:/mule-user-guide/v/3.6/http-response-builder[HTTP Response Builder]
***** link:/mule-user-guide/v/3.6/invoke-component-reference[Invoke Component Reference]
***** link:/mule-user-guide/v/3.6/java-component-reference[Java Component Reference]
***** link:/mule-user-guide/v/3.6/logger-component-reference[Logger Component Reference]
***** link:/mule-user-guide/v/3.6/logging-in-mule[Logging in Mule]
***** link:/mule-user-guide/v/3.6/rest-component-reference[REST Component Reference]
***** link:/mule-user-guide/v/3.6/script-component-reference[Script Component Reference]
***** link:/mule-user-guide/v/3.6/groovy-component-reference[Groovy Component Reference]
***** link:/mule-user-guide/v/3.6/javascript-component-reference[JavaScript Component Reference]
***** link:/mule-user-guide/v/3.6/python-component-reference[Python Component Reference]
***** link:/mule-user-guide/v/3.6/ruby-component-reference[Ruby Component Reference]
**** link:/mule-user-guide/v/3.6/filters[Filters]
***** link:/mule-user-guide/v/3.6/custom-filter[Custom Filter]
***** link:/mule-user-guide/v/3.6/exception-filter[Exception Filter]
***** link:/mule-user-guide/v/3.6/filter-ref[Filter Ref]
***** link:/mule-user-guide/v/3.6/json-schema-validator[JSON Schema Validator]
***** link:/mule-user-guide/v/3.6/logic-filter[Logic Filter]
***** link:/mule-user-guide/v/3.6/message-filter[Message Filter]
***** link:/mule-user-guide/v/3.6/message-property-filter[Message Property Filter]
***** link:/mule-user-guide/v/3.6/regex-filter[Regex Filter]
***** link:/mule-user-guide/v/3.6/schema-validation-filter[Schema Validation Filter]
***** link:/mule-user-guide/v/3.6/wildcard-filter[Wildcard Filter]
**** link:/mule-user-guide/v/3.6/routers[Routers]
***** link:/mule-user-guide/v/3.6/all-flow-control-reference[All Flow Control Reference]
***** link:/mule-user-guide/v/3.6/choice-flow-control-reference[Choice Flow Control Reference]
***** link:/mule-user-guide/v/3.6/scatter-gather[Scatter-Gather]
***** link:/mule-user-guide/v/3.6/splitter-flow-control-reference[Splitter Flow Control Reference]
**** link:/mule-user-guide/v/3.6/scopes[Scopes]
***** link:/mule-user-guide/v/3.6/async-scope-reference[Async Scope Reference]
***** link:/mule-user-guide/v/3.6/cache-scope[Cache Scope]
***** link:/mule-user-guide/v/3.6/foreach[Foreach]
***** link:/mule-user-guide/v/3.6/message-enricher[Message Enricher]
***** link:/mule-user-guide/v/3.6/poll-reference[Poll Reference]
***** link:/mule-user-guide/v/3.6/poll-schedulers[Poll Schedulers]
***** link:/mule-user-guide/v/3.6/request-reply-scope[Request-Reply Scope]
***** link:/mule-user-guide/v/3.6/transactional[Transactional]
***** link:/mule-user-guide/v/3.6/until-successful-scope[Until Successful Scope]
**** link:/mule-user-guide/v/3.6/transformers[Transformers]
***** link:/mule-user-guide/v/3.6/using-transformers[Using Transformers]
***** link:/mule-user-guide/v/3.6/transformers-configuration-reference[Transformers Configuration Reference]
***** link:/mule-user-guide/v/3.6/native-support-for-json[Native Support for JSON]
***** link:/mule-user-guide/v/3.6/xmlprettyprinter-transformer[XmlPrettyPrinter Transformer]
***** link:/mule-user-guide/v/3.6/creating-custom-transformers[Creating Custom Transformers]
***** link:/mule-user-guide/v/3.6/creating-flow-objects-and-transformers-using-annotations[Creating Flow Objects and Transformers Using Annotations]
***** link:/mule-user-guide/v/3.6/function-annotation[Function Annotation]
***** link:/mule-user-guide/v/3.6/groovy-annotation[Groovy Annotation]
***** link:/mule-user-guide/v/3.6/inboundattachments-annotation[InboundAttachments Annotation]
***** link:/mule-user-guide/v/3.6/inboundheaders-annotation[InboundHeaders Annotation]
***** link:/mule-user-guide/v/3.6/lookup-annotation[Lookup Annotation]
***** link:/mule-user-guide/v/3.6/mule-annotation[Mule Annotation]
***** link:/mule-user-guide/v/3.6/outboundattachments-annotation[OutboundAttachments Annotation]
***** link:/mule-user-guide/v/3.6/outboundheaders-annotation[OutboundHeaders Annotation]
***** link:/mule-user-guide/v/3.6/payload-annotation[Payload Annotation]
***** link:/mule-user-guide/v/3.6/schedule-annotation[Schedule Annotation]
***** link:/mule-user-guide/v/3.6/transformer-annotation[Transformer Annotation]
***** link:/mule-user-guide/v/3.6/xpath-annotation[XPath Annotation]
***** link:/mule-user-guide/v/3.6/creating-custom-transformer-classes[Creating Custom Transformer Classes]
***** link:/mule-user-guide/v/3.6/append-string-transformer-reference[Append String Transformer Reference]
***** link:/mule-user-guide/v/3.6/attachment-transformer-reference[Attachment Transformer Reference]
***** link:/mule-user-guide/v/3.6/expression-transformer-reference[Expression Transformer Reference]
***** link:/mule-user-guide/v/3.6/java-transformer-reference[Java Transformer Reference]
***** link:/mule-user-guide/v/3.6/object-to-xml-transformer-reference[Object to XML Transformer Reference]
***** link:/mule-user-guide/v/3.6/parse-template-reference[Parse Template Reference]
***** link:/mule-user-guide/v/3.6/property-transformer-reference[Property Transformer Reference]
***** link:/mule-user-guide/v/3.6/script-transformer-reference[Script Transformer Reference]
***** link:/mule-user-guide/v/3.6/session-variable-transformer-reference[Session Variable Transformer Reference]
***** link:/mule-user-guide/v/3.6/set-payload-transformer-reference[Set Payload Transformer Reference]
***** link:/mule-user-guide/v/3.6/variable-transformer-reference[Variable Transformer Reference]
***** link:/mule-user-guide/v/3.6/xml-to-object-transformer-reference[XML to Object Transformer Reference]
***** link:/mule-user-guide/v/3.6/xslt-transformer-reference[XSLT Transformer Reference]
***** link:/mule-user-guide/v/3.6/datamapper-user-guide-and-reference[Datamapper User Guide and Reference]
***** link:/mule-user-guide/v/3.6/datamapper-concepts[DataMapper Concepts]
***** link:/mule-user-guide/v/3.6/datamapper-visual-reference[DataMapper Visual Reference]
***** link:/mule-user-guide/v/3.6/defining-datamapper-input-and-output-metadata[Defining DataMapper Input and Output Metadata]
***** link:/mule-user-guide/v/3.6/defining-metadata-using-edit-fields[Defining Metadata Using Edit Fields]
***** link:/mule-user-guide/v/3.6/pojo-class-bindings-and-factory-classes[POJO Class Bindings and Factory Classes]
***** link:/mule-user-guide/v/3.6/building-a-mapping-flow-in-the-graphical-mapping-editor[Building a Mapping Flow in the Graphical Mapping Editor]
***** link:/mule-user-guide/v/3.6/mapping-flow-input-and-output-properties[Mapping Flow Input and Output Properties]
***** link:/mule-user-guide/v/3.6/datamapper-input-error-policy-for-bad-input-data[DataMapper Input Error Policy for Bad Input Data]
***** link:/mule-user-guide/v/3.6/using-datamapper-lookup-tables[Using DataMapper Lookup Tables]
***** link:/mule-user-guide/v/3.6/streaming-data-processing-with-datamapper[Streaming Data Processing with DataMapper]
***** link:/mule-user-guide/v/3.6/updating-metadata-in-an-existing-mapping[Updating Metadata in an Existing Mapping]
***** link:/mule-user-guide/v/3.6/mapping-elements-inside-lists[Mapping Elements Inside Lists]
***** link:/mule-user-guide/v/3.6/previewing-datamapper-results-on-sample-data[Previewing DataMapper Results on Sample Data]
***** link:/mule-user-guide/v/3.6/datamapper-examples[DataMapper Examples]
***** link:/mule-user-guide/v/3.6/datamapper-supplemental-topics[DataMapper Supplemental Topics]
***** link:/mule-user-guide/v/3.6/choosing-mel-or-ctl2-as-scripting-engine[Choosing MEL or CTL2 as Scripting Engine]
***** link:/mule-user-guide/v/3.6/datamapper-fixed-width-input-format[DataMapper Fixed Width Input Format]
***** link:/mule-user-guide/v/3.6/datamapper-flat-to-structured-and-structured-to-flat-mapping[DataMapper Flat-to-Structured and Structured-to-Flat Mapping]
**** link:/mule-user-guide/v/3.6/business-events[Business Events]
*** link:/mule-user-guide/v/3.6/error-handling[Error Handling]
**** link:/mule-user-guide/v/3.6/catch-exception-strategy[Catch Exception Strategy]
**** link:/mule-user-guide/v/3.6/choice-exception-strategy[Choice Exception Strategy]
**** link:/mule-user-guide/v/3.6/reference-exception-strategy[Reference Exception Strategy]
**** link:/mule-user-guide/v/3.6/rollback-exception-strategy[Rollback Exception Strategy]
**** link:/mule-user-guide/v/3.6/exception-strategy-most-common-use-cases[Exception Strategy Most Common Use Cases]
*** link:/mule-user-guide/v/3.6/mule-expression-language-mel[Mule Expression Language MEL]
**** link:/mule-user-guide/v/3.6/mule-expression-language-basic-syntax[Mule Expression Language Basic Syntax]
**** link:/mule-user-guide/v/3.6/mule-expression-language-examples[Mule Expression Language Examples]
**** link:/mule-user-guide/v/3.6/mule-expression-language-reference[Mule Expression Language Reference]
***** link:/mule-user-guide/v/3.6/mule-expression-language-date-and-time-functions[Mule Expression Language Date and Time Functions]
**** link:/mule-user-guide/v/3.6/mule-expression-language-tips[Mule Expression Language Tips]
*** link:/mule-user-guide/v/3.6/datasense[DataSense]
**** link:/mule-user-guide/v/3.6/testing-connections[Testing Connections]
**** link:/mule-user-guide/v/3.6/using-perceptive-flow-design[Using Perceptive Flow Design]
**** link:/mule-user-guide/v/3.6/datasense-enabled-connectors[DataSense-enabled Connectors]
**** link:/mule-user-guide/v/3.6/using-the-datasense-explorer[Using the DataSense Explorer]
**** link:/mule-user-guide/v/3.6/datasense-query-editor[DataSense Query Editor]
**** link:/mule-user-guide/v/3.6/datasense-query-language[DataSense Query Language]
*** link:/mule-user-guide/v/3.6/using-maven-with-mule[Using Maven with Mule]
**** link:/mule-user-guide/v/3.6/using-maven-in-anypoint-studio[Using Maven in Anypoint Studio]
***** link:/mule-user-guide/v/3.6/maven-support-in-anypoint-studio[Maven Support in Anypoint Studio]
***** link:/mule-user-guide/v/3.6/building-a-mule-application-with-maven-in-studio[Building a Mule Application with Maven in Studio]
***** link:/mule-user-guide/v/3.6/enabling-maven-support-for-a-studio-project[Enabling Maven Support for a Studio Project]
***** link:/mule-user-guide/v/3.6/importing-a-maven-project-into-studio[Importing a Maven Project into Studio]
**** link:/mule-user-guide/v/3.6/using-maven-in-mule-esb[Using Maven in Mule ESB]
***** link:/mule-user-guide/v/3.6/configuring-maven-to-work-with-mule-esb[Configuring Maven to Work with Mule ESB]
***** link:/mule-user-guide/v/3.6/maven-tools-for-mule-esb[Maven Tools for Mule ESB]
***** link:/mule-user-guide/v/3.6/mule-esb-plugin-for-maven[Mule ESB Plugin For Maven]
**** link:/mule-user-guide/v/3.6/maven-reference[Maven Reference]
*** link:/mule-user-guide/v/3.6/batch-processing[Batch Processing]
**** link:/mule-user-guide/v/3.6/batch-filters-and-batch-commit[Batch Filters and Batch Commit]
**** link:/mule-user-guide/v/3.6/batch-processing-reference[Batch Processing Reference]
***** link:/mule-user-guide/v/3.6/using-mel-with-batch-processing[Using MEL with Batch Processing]
**** link:/mule-user-guide/v/3.6/batch-streaming-and-job-execution[Batch Streaming and Job Execution]
**** link:/mule-user-guide/v/3.6/record-variable[Record Variable]
*** link:/mule-user-guide/v/3.6/transaction-management[Transaction Management]
**** link:/mule-user-guide/v/3.6/single-resource-transactions[Single Resource Transactions]
**** link:/mule-user-guide/v/3.6/multiple-resource-transactions[Multiple Resource Transactions]
**** link:/mule-user-guide/v/3.6/xa-transactions[XA Transactions]
**** link:/mule-user-guide/v/3.6/using-bitronix-to-manage-transactions[Using Bitronix to Manage Transactions]
*** link:/mule-user-guide/v/3.6/the-properties-editor[The Properties Editor]
*** link:/mule-user-guide/v/3.6/importing-and-exporting-in-studio[Importing and Exporting in Studio]
*** link:/mule-user-guide/v/3.6/adding-and-removing-user-libraries[Adding and Removing User Libraries]
*** link:/mule-user-guide/v/3.6/changing-runtimes-in-studio[Changing Runtimes in Studio]
*** link:/mule-user-guide/v/3.6/starting-the-runtime-in-cluster-mode-in-studio[Starting the Runtime in Cluster Mode in Studio]
*** link:/mule-user-guide/v/3.6/shared-resources[Shared Resources]
**** link:/mule-user-guide/v/3.6/setting-environment-variables[Setting Environment Variables]
*** link:/mule-user-guide/v/3.6/mule-versus-web-application-server[Mule versus Web Application Server]
*** link:/mule-user-guide/v/3.6/publishing-and-consuming-apis-with-mule[Publishing and Consuming APIs with Mule]
**** link:/mule-user-guide/v/3.6/publishing-a-soap-api[Publishing a SOAP API]
***** link:/mule-user-guide/v/3.6/securing-a-soap-api[Securing a SOAP API]
***** link:/mule-user-guide/v/3.6/extra-cxf-component-configurations[Extra CXF Component Configurations]
**** link:/mule-user-guide/v/3.6/consuming-a-soap-api[Consuming a SOAP API]
**** link:/mule-user-guide/v/3.6/publishing-a-rest-api[Publishing a REST API]
**** link:/mule-user-guide/v/3.6/consuming-a-rest-api[Consuming a REST API]
***** link:/mule-user-guide/v/3.6/rest-api-examples[REST API Examples]
*** link:/mule-user-guide/v/3.6/advanced-usage-of-mule-esb[Advanced Usage of Mule ESB]
**** link:/mule-user-guide/v/3.6/storing-objects-in-the-registry[Storing Objects in the Registry]
**** link:/mule-user-guide/v/3.6/object-scopes[Object Scopes]
**** link:/mule-user-guide/v/3.6/using-mule-with-spring[Using Mule with Spring]
***** link:/mule-user-guide/v/3.6/sending-and-receiving-mule-events-in-spring[Sending and Receiving Mule Events in Spring]
***** link:/mule-user-guide/v/3.6/spring-application-contexts[Spring Application Contexts]
***** link:/mule-user-guide/v/3.6/using-spring-beans-as-flow-components[Using Spring Beans as Flow Components]
**** link:/mule-user-guide/v/3.6/configuring-properties[Configuring Properties]
**** link:/mule-user-guide/v/3.6/creating-and-managing-a-cluster-manually[Creating and Managing a Cluster Manually]
**** link:/mule-user-guide/v/3.6/distributed-file-polling[Distributed File Polling]
**** link:/mule-user-guide/v/3.6/distributed-locking[Distributed Locking]
**** link:/mule-user-guide/v/3.6/streaming[Streaming]
**** link:/mule-user-guide/v/3.6/about-configuration-builders[About Configuration Builders]
**** link:/mule-user-guide/v/3.6/internationalizing-strings[Internationalizing Strings]
**** link:/mule-user-guide/v/3.6/bootstrapping-the-registry[Bootstrapping the Registry]
**** link:/mule-user-guide/v/3.6/tuning-performance[Tuning Performance]
**** link:/mule-user-guide/v/3.6/mule-agents[Mule Agents]
***** link:/mule-user-guide/v/3.6/agent-security-disabled-weak-ciphers[Agent Security: Disabled Weak Ciphers]
***** link:/mule-user-guide/v/3.6/jmx-management[JMX Management]
**** link:/mule-user-guide/v/3.6/flow-processing-strategies[Flow Processing Strategies]
**** link:/mule-user-guide/v/3.6/mule-object-stores[Mule Object Stores]
**** link:/mule-user-guide/v/3.6/configuring-reconnection-strategies[Configuring Reconnection Strategies]
**** link:/mule-user-guide/v/3.6/using-the-mule-client[Using the Mule Client]
**** link:/mule-user-guide/v/3.6/using-web-services[Using Web Services]
***** link:/mule-user-guide/v/3.6/proxying-web-services[Proxying Web Services]
***** link:/mule-user-guide/v/3.6/using-.net-web-services-with-mule[Using .NET Web Services with Mule]
**** link:/mule-user-guide/v/3.6/passing-additional-arguments-to-the-jvm-to-control-mule[Passing Additional Arguments to the JVM to Control Mule]
** link:/mule-user-guide/v/3.6/securing[Securing]
*** link:/mule-user-guide/v/3.6/anypoint-enterprise-security[Anypoint Enterprise Security]
**** link:/mule-user-guide/v/3.6/installing-anypoint-enterprise-security[Installing Anypoint Enterprise Security]
**** link:/mule-user-guide/v/3.6/mule-secure-token-service[Mule Secure Token Service]
***** link:/mule-user-guide/v/3.6/creating-an-oauth-2.0a-web-service-provider[Creating an OAuth 2.0a Web Service Provider]
***** link:/mule-user-guide/v/3.6/authorization-grant-types[Authorization Grant Types]
**** link:/mule-user-guide/v/3.6/mule-credentials-vault[Mule Credentials Vault]
**** link:/mule-user-guide/v/3.6/mule-message-encryption-processor[Mule Message Encryption Processor]
***** link:/mule-user-guide/v/3.6/pgp-encrypter[PGP Encrypter]
**** link:/mule-user-guide/v/3.6/mule-digital-signature-processor[Mule Digital Signature Processor]
**** link:/mule-user-guide/v/3.6/anypoint-filter-processor[Anypoint Filter Processor]
**** link:/mule-user-guide/v/3.6/mule-crc32-processor[Mule CRC32 Processor]
**** link:/mule-user-guide/v/3.6/anypoint-enterprise-security-example-application[Anypoint Enterprise Security Example Application]
**** link:/mule-user-guide/v/3.6/mule-sts-oauth-2.0a-example-application[Mule STS OAuth 2.0a Example Application]
*** link:/mule-user-guide/v/3.6/configuring-security[Configuring Security]
**** link:/mule-user-guide/v/3.6/configuring-the-spring-security-manager[Configuring the Spring Security Manager]
**** link:/mule-user-guide/v/3.6/component-authorization-using-spring-security[Component Authorization Using Spring Security]
**** link:/mule-user-guide/v/3.6/setting-up-ldap-provider-for-spring-security[Setting up LDAP Provider for Spring Security]
**** link:/mule-user-guide/v/3.6/upgrading-from-acegi-to-spring-security[Upgrading from Acegi to Spring Security]
**** link:/mule-user-guide/v/3.6/encryption-strategies[Encryption Strategies]
**** link:/mule-user-guide/v/3.6/pgp-security[PGP Security]
**** link:/mule-user-guide/v/3.6/jaas-security[Jaas Security]
**** link:/mule-user-guide/v/3.6/saml-module[SAML Module]
*** link:/mule-user-guide/v/3.6/fips-140-2-compliance-support[FIPS 140-2 Compliance Support]
** link:/mule-user-guide/v/3.6/debugging[Debugging]
*** link:/mule-user-guide/v/3.6/studio-visual-debugger[Studio Visual Debugger]
*** link:/mule-user-guide/v/3.6/troubleshooting[Troubleshooting]
**** link:/mule-user-guide/v/3.6/configuring-mule-stacktraces[Configuring Mule Stacktraces]
**** link:/mule-user-guide/v/3.6/debugging-outside-studio[Debugging Outside Studio]
**** link:/mule-user-guide/v/3.6/logging[Logging]
** link:/mule-user-guide/v/3.6/testing[Testing]
*** link:/mule-user-guide/v/3.6/introduction-to-testing-mule[Introduction to Testing Mule]
*** link:/mule-user-guide/v/3.6/unit-testing[Unit Testing]
*** link:/mule-user-guide/v/3.6/functional-testing[Functional Testing]
*** link:/mule-user-guide/v/3.6/testing-strategies[Testing Strategies]
*** link:/mule-user-guide/v/3.6/munit[MUnit]
** link:/mule-user-guide/v/3.6/deploying[Deploying]
*** link:/mule-user-guide/v/3.6/starting-and-stopping-mule-esb[Starting and Stopping Mule ESB]
*** link:/mule-user-guide/v/3.6/deployment-scenarios[Deployment Scenarios]
**** link:/mule-user-guide/v/3.6/choosing-the-right-clustering-topology[Choosing the Right Clustering Topology]
**** link:/mule-user-guide/v/3.6/embedding-mule-in-a-java-application-or-webapp[Embedding Mule in a Java Application or Webapp]
**** link:/mule-user-guide/v/3.6/deploying-mule-to-jboss[Deploying Mule to JBoss]
***** link:/mule-user-guide/v/3.6/mule-as-mbean[Mule as MBean]
**** link:/mule-user-guide/v/3.6/deploying-mule-to-weblogic[Deploying Mule to WebLogic]
**** link:/mule-user-guide/v/3.6/deploying-mule-to-websphere[Deploying Mule to WebSphere]
**** link:/mule-user-guide/v/3.6/deploying-mule-as-a-service-to-tomcat[Deploying Mule as a Service to Tomcat]
**** link:/mule-user-guide/v/3.6/application-server-based-hot-deployment[Application Server Based Hot Deployment]
**** link:/mule-user-guide/v/3.6/classloader-control-in-mule[Classloader Control in Mule]
***** link:/mule-user-guide/v/3.6/fine-grain-classloader-control[Fine Grain Classloader Control]
*** link:/mule-user-guide/v/3.6/deploying-to-multiple-environments[Deploying to Multiple Environments]
*** link:/mule-user-guide/v/3.6/mule-high-availability-ha-clusters[Mule High Availability HA Clusters]
**** link:/mule-user-guide/v/3.6/evaluating-mule-high-availability-clusters-demo[Evaluating Mule High Availability Clusters Demo]
***** link:/mule-user-guide/v/3.6/1-installing-the-demo-bundle[1 - Installing the Demo Bundle]
***** link:/mule-user-guide/v/3.6/2-creating-a-cluster[2 - Creating a Cluster]
***** link:/mule-user-guide/v/3.6/3-deploying-an-application[3 - Deploying an Application]
***** link:/mule-user-guide/v/3.6/4-applying-load-to-the-cluster[4 - Applying Load to the Cluster]
***** link:/mule-user-guide/v/3.6/5-witnessing-failover[5 - Witnessing Failover]
***** link:/mule-user-guide/v/3.6/6-troubleshooting-and-next-steps[6 - Troubleshooting and Next Steps]
*** link:/mule-user-guide/v/3.6/mule-deployment-model[Mule Deployment Model]
**** link:/mule-user-guide/v/3.6/hot-deployment[Hot Deployment]
**** link:/mule-user-guide/v/3.6/application-deployment[Application Deployment]
**** link:/mule-user-guide/v/3.6/application-format[Application Format]
**** link:/mule-user-guide/v/3.6/mule-application-deployment-descriptor[Mule Application Deployment Descriptor]
***** link:/mule-user-guide/v/3.6/application-plugin-format[Application Plugin Format]
***** link:/mule-user-guide/v/3.6/mule-plugin-format[Mule Plugin Format]
*** link:/mule-user-guide/v/3.6/mule-server-notifications[Mule Server Notifications]
*** link:/mule-user-guide/v/3.6/profiling-mule[Profiling Mule]
*** link:/mule-user-guide/v/3.6/hardening-your-mule-installation[Hardening your Mule Installation]
*** link:/mule-user-guide/v/3.6/configuring-mule-for-different-deployment-scenarios[Configuring Mule for Different Deployment Scenarios]
**** link:/mule-user-guide/v/3.6/configuring-mule-as-a-linux-or-unix-daemon[Configuring Mule as a Linux or Unix Daemon]
**** link:/mule-user-guide/v/3.6/configuring-mule-as-a-windows-service[Configuring Mule as a Windows Service]
**** link:/mule-user-guide/v/3.6/configuring-mule-to-run-from-a-script[Configuring Mule to Run From a Script]
**** link:/mule-user-guide/v/3.6/configuring-mule-to-run-from-maven[Configuring Mule to Run From Maven]
*** link:/mule-user-guide/v/3.6/preparing-a-gitignore-file[Preparing a gitignore File]
*** link:/mule-user-guide/v/3.6/using-subversion-with-studio[Using Subversion with Studio]
** link:/mule-user-guide/v/3.6/extending[Extending]
*** link:/mule-user-guide/v/3.6/extending-components[Extending Components]
*** link:/mule-user-guide/v/3.6/custom-message-processors[Custom Message Processors]
*** link:/mule-user-guide/v/3.6/creating-example-archetypes[Creating Example Archetypes]
*** link:/mule-user-guide/v/3.6/creating-a-custom-xml-namespace[Creating a Custom XML Namespace]
*** link:/mule-user-guide/v/3.6/creating-module-archetypes[Creating Module Archetypes]
*** link:/mule-user-guide/v/3.6/creating-catalog-archetypes[Creating Catalog Archetypes]
*** link:/mule-user-guide/v/3.6/creating-project-archetypes[Creating Project Archetypes]
*** link:/mule-user-guide/v/3.6/creating-transports[Creating Transports]
**** link:/mule-user-guide/v/3.6/transport-archetype[Transport Archetype]
**** link:/mule-user-guide/v/3.6/transport-service-descriptors[Transport Service Descriptors]
*** link:/mule-user-guide/v/3.6/creating-custom-routers[Creating Custom Routers]
** link:/mule-user-guide/v/3.6/reference[Reference]
*** link:/mule-user-guide/v/3.6/team-development-with-mule[Team Development with Mule]
**** link:/mule-user-guide/v/3.6/modularizing-your-configuration-files-for-team-development[Modularizing Your Configuration Files for Team Development]
**** link:/mule-user-guide/v/3.6/using-side-by-side-configuration-files[Using Side-by-Side Configuration Files]
**** link:/mule-user-guide/v/3.6/using-modules-in-your-application[Using Modules In Your Application]
**** link:/mule-user-guide/v/3.6/sharing-custom-code[Sharing Custom Code]
**** link:/mule-user-guide/v/3.6/sharing-custom-configuration-fragments[Sharing Custom Configuration Fragments]
**** link:/mule-user-guide/v/3.6/sharing-custom-configuration-patterns[Sharing Custom Configuration Patterns]
**** link:/mule-user-guide/v/3.6/sharing-applications[Sharing Applications]
**** link:/mule-user-guide/v/3.6/sustainable-software-development-practices-with-mule[Sustainable Software Development Practices with Mule]
***** link:/mule-user-guide/v/3.6/reproducible-builds[Reproducible Builds]
***** link:/mule-user-guide/v/3.6/continuous-integration[Continuous Integration]
*** link:/mule-user-guide/v/3.6/configuration-patterns[Configuration Patterns]
**** link:/mule-user-guide/v/3.6/understanding-mule-configuration[Understanding Mule Configuration]
***** link:/mule-user-guide/v/3.6/about-the-xml-configuration-file[About the XML Configuration File]
**** link:/mule-user-guide/v/3.6/choosing-between-flows-and-patterns[Choosing Between Flows and Patterns]
***** link:/mule-user-guide/v/3.6/using-flows-for-service-orchestration[Using Flows for Service Orchestration]
***** link:/mule-user-guide/v/3.6/using-mule-configuration-patterns[Using Mule Configuration Patterns]
***** link:/mule-user-guide/v/3.6/pattern-based-configuration[Pattern-Based Configuration]
***** link:/mule-user-guide/v/3.6/simple-service-pattern[Simple Service Pattern]
***** link:/mule-user-guide/v/3.6/bridge-pattern[Bridge Pattern]
***** link:/mule-user-guide/v/3.6/validator-pattern[Validator Pattern]
***** link:/mule-user-guide/v/3.6/web-service-proxy-pattern[Web Service Proxy Pattern]
***** link:/mule-user-guide/v/3.6/http-proxy-pattern[HTTP Proxy Pattern]
***** link:/mule-user-guide/v/3.6/about-mule-configuration[About Mule Configuration]
***** link:/mule-user-guide/v/3.6/understanding-enterprise-integration-patterns-using-mule[Understanding Enterprise Integration Patterns Using Mule]
***** link:/mule-user-guide/v/3.6/understanding-orchestration-using-mule[Understanding Orchestration Using Mule]
***** link:/mule-user-guide/v/3.6/understanding-configuration-patterns-using-mule[Understanding Configuration Patterns Using Mule]
***** link:/mule-user-guide/v/3.6/connecting-with-transports-and-connectors[Connecting with Transports and Connectors]
***** link:/mule-user-guide/v/3.6/using-mule-with-web-services[Using Mule with Web Services]
*** link:/mule-user-guide/v/3.6/filter-references[Filter References]
**** link:/mule-user-guide/v/3.6/idempotent-filter[Idempotent Filter]
*** link:/mule-user-guide/v/3.6/general-configuration-reference[General Configuration Reference]
**** link:/mule-user-guide/v/3.6/bpm-configuration-reference[BPM Configuration Reference]
**** link:/mule-user-guide/v/3.6/component-configuration-reference[Component Configuration Reference]
**** link:/mule-user-guide/v/3.6/endpoint-configuration-reference[Endpoint Configuration Reference]
***** link:/mule-user-guide/v/3.6/mule-endpoint-uris[Mule Endpoint URIs]
**** link:/mule-user-guide/v/3.6/exception-strategy-configuration-reference[Exception Strategy Configuration Reference]
**** link:/mule-user-guide/v/3.6/filters-configuration-reference[Filters Configuration Reference]
**** link:/mule-user-guide/v/3.6/global-settings-configuration-reference[Global Settings Configuration Reference]
**** link:/mule-user-guide/v/3.6/notifications-configuration-reference[Notifications Configuration Reference]
**** link:/mule-user-guide/v/3.6/properties-configuration-reference[Properties Configuration Reference]
**** link:/mule-user-guide/v/3.6/security-manager-configuration-reference[Security Manager Configuration Reference]
**** link:/mule-user-guide/v/3.6/transactions-configuration-reference[Transactions Configuration Reference]
*** link:/mule-user-guide/v/3.6/transports-reference[Transports Reference]
**** link:/mule-user-guide/v/3.6/connecting-using-transports[Connecting Using Transports]
***** link:/mule-user-guide/v/3.6/configuring-a-transport[Configuring a Transport]
**** link:/mule-user-guide/v/3.6/ajax-transport-reference[AJAX Transport Reference]
**** link:/mule-user-guide/v/3.6/ejb-transport-reference[EJB Transport Reference]
**** link:/mule-user-guide/v/3.6/email-transport-reference[Email Transport Reference]
**** link:/mule-user-guide/v/3.6/file-transport-reference[File Transport Reference]
**** link:/mule-user-guide/v/3.6/ftp-transport-reference[FTP Transport Reference]
**** link:/mule-user-guide/v/3.6/mulesoft-enterprise-java-connector-for-sap-reference[MuleSoft Enterprise Java Connector for SAP Reference]
***** link:/mule-user-guide/v/3.6/sap-jco-extended-properties[SAP JCo Extended Properties]
***** link:/mule-user-guide/v/3.6/sap-jco-server-services-configuration[SAP JCo Server Services Configuration]
***** link:/mule-user-guide/v/3.6/outbound-endpoint-transactions[Outbound Endpoint Transactions]
***** link:/mule-user-guide/v/3.6/troubleshooting-sap-connector[Troubleshooting SAP Connector]
***** link:/mule-user-guide/v/3.6/xml-definitions[XML Definitions]
**** link:/mule-user-guide/v/3.6/http-transport-reference[HTTP Transport Reference]
**** link:/mule-user-guide/v/3.6/https-transport-reference[HTTPS Transport Reference]
**** link:/mule-user-guide/v/3.6/imap-transport-reference[IMAP Transport Reference]
**** link:/mule-user-guide/v/3.6/jdbc-transport-reference[JDBC Transport Reference]
**** link:/mule-user-guide/v/3.6/jetty-transport-reference[Jetty Transport Reference]
***** link:/mule-user-guide/v/3.6/jetty-ssl-transport[Jetty SSL Transport]
**** link:/mule-user-guide/v/3.6/jms-transport-reference[JMS Transport Reference]
***** link:/mule-user-guide/v/3.6/activemq-integration[ActiveMQ Integration]
***** link:/mule-user-guide/v/3.6/hornetq-integration[HornetQ Integration]
***** link:/mule-user-guide/v/3.6/open-mq-integration[Open MQ Integration]
***** link:/mule-user-guide/v/3.6/solace-jms[Solace JMS]
***** link:/mule-user-guide/v/3.6/tibco-ems-integration[Tibco EMS Integration]
**** link:/mule-user-guide/v/3.6/multicast-transport-reference[Multicast Transport Reference]
**** link:/mule-user-guide/v/3.6/pop3-transport-reference[POP3 Transport Reference]
**** link:/mule-user-guide/v/3.6/quartz-transport-reference[Quartz Transport Reference]
**** link:/mule-user-guide/v/3.6/rmi-transport-reference[RMI Transport Reference]
**** link:/mule-user-guide/v/3.6/servlet-transport-reference[Servlet Transport Reference]
**** link:/mule-user-guide/v/3.6/sftp-transport-reference[SFTP Transport Reference]
**** link:/mule-user-guide/v/3.6/smtp-transport-reference[SMTP Transport Reference]
**** link:/mule-user-guide/v/3.6/ssl-and-tls-transports-reference[SSL and TLS Transports Reference]
**** link:/mule-user-guide/v/3.6/stdio-transport-reference[STDIO Transport Reference]
**** link:/mule-user-guide/v/3.6/tcp-transport-reference[TCP Transport Reference]
**** link:/mule-user-guide/v/3.6/udp-transport-reference[UDP Transport Reference]
**** link:/mule-user-guide/v/3.6/vm-transport-reference[VM Transport Reference]
**** link:/mule-user-guide/v/3.6/mule-wmq-transport-reference[Mule WMQ Transport Reference]
**** link:/mule-user-guide/v/3.6/wsdl-connectors[WSDL Connectors]
**** link:/mule-user-guide/v/3.6/xmpp-transport-reference[XMPP Transport Reference]
*** link:/mule-user-guide/v/3.6/modules-reference[Modules Reference]
**** link:/mule-user-guide/v/3.6/atom-module-reference[Atom Module Reference]
**** link:/mule-user-guide/v/3.6/bpm-module-reference[BPM Module Reference]
***** link:/mule-user-guide/v/3.6/drools-module-reference[Drools Module Reference]
***** link:/mule-user-guide/v/3.6/jboss-jbpm-module-reference[JBoss jBPM Module Reference]
**** link:/mule-user-guide/v/3.6/cxf-module-reference[CXF Module Reference]
***** link:/mule-user-guide/v/3.6/cxf-module-overview[CXF Module Overview]
***** link:/mule-user-guide/v/3.6/building-web-services-with-cxf[Building Web Services with CXF]
***** link:/mule-user-guide/v/3.6/consuming-web-services-with-cxf[Consuming Web Services with CXF]
***** link:/mule-user-guide/v/3.6/enabling-ws-addressing[Enabling WS-Addressing]
***** link:/mule-user-guide/v/3.6/enabling-ws-security[Enabling WS-Security]
***** link:/mule-user-guide/v/3.6/cxf-error-handling[CXF Error Handling]
***** link:/mule-user-guide/v/3.6/proxying-web-services-with-cxf[Proxying Web Services with CXF]
***** link:/mule-user-guide/v/3.6/supported-web-service-standards[Supported Web Service Standards]
***** link:/mule-user-guide/v/3.6/using-a-web-service-client-directly[Using a Web Service Client Directly]
***** link:/mule-user-guide/v/3.6/using-http-get-requests[Using HTTP GET Requests]
***** link:/mule-user-guide/v/3.6/using-mtom[Using MTOM]
***** link:/mule-user-guide/v/3.6/cxf-module-configuration-reference[CXF Module Configuration Reference]
**** link:/mule-user-guide/v/3.6/data-bindings-reference[Data Bindings Reference]
**** link:/mule-user-guide/v/3.6/jaas-module-reference[JAAS Module Reference]
**** link:/mule-user-guide/v/3.6/jboss-transaction-manager-reference[JBoss Transaction Manager Reference]
**** link:/mule-user-guide/v/3.6/jersey-module-reference[Jersey Module Reference]
**** link:/mule-user-guide/v/3.6/json-module-reference[JSON Module Reference]
**** link:/mule-user-guide/v/3.6/rss-module-reference[RSS Module Reference]
**** link:/mule-user-guide/v/3.6/scripting-module-reference[Scripting Module Reference]
**** link:/mule-user-guide/v/3.6/spring-extras-module-reference[Spring Extras Module Reference]
**** link:/mule-user-guide/v/3.6/sxc-module-reference[SXC Module Reference]
**** link:/mule-user-guide/v/3.6/xml-module-reference[XML Module Reference]
***** link:/mule-user-guide/v/3.6/domtoxml-transformer[DomToXml Transformer]
***** link:/mule-user-guide/v/3.6/jaxb-bindings[JAXB Bindings]
***** link:/mule-user-guide/v/3.6/jaxb-transformers[JAXB Transformers]
***** link:/mule-user-guide/v/3.6/jxpath-extractor-transformer[JXPath Extractor Transformer]
***** link:/mule-user-guide/v/3.6/xml-namespaces[XML Namespaces]
***** link:/mule-user-guide/v/3.6/xmlobject-transformers[XmlObject Transformers]
***** link:/mule-user-guide/v/3.6/xmltoxmlstreamreader-transformer[XmlToXMLStreamReader Transformer]
***** link:/mule-user-guide/v/3.6/xquery-support[XQuery Support]
***** link:/mule-user-guide/v/3.6/xquery-transformer[XQuery Transformer]
***** link:/mule-user-guide/v/3.6/xslt-transformer[XSLT Transformer]
***** link:/mule-user-guide/v/3.6/xpath-extractor-transformer[XPath Extractor Transformer]
***** link:/mule-user-guide/v/3.6/xpath[XPath]
*** link:/mule-user-guide/v/3.6/non-mel-expressions-configuration-reference[Non-MEL Expressions Configuration Reference]
**** link:/mule-user-guide/v/3.6/using-non-mel-expressions[Using Non-MEL Expressions]
*** link:/mule-user-guide/v/3.6/creating-non-mel-expression-evaluators[Creating Non-MEL Expression Evaluators]
*** link:/mule-user-guide/v/3.6/schema-documentation[Schema Documentation]
**** link:/mule-user-guide/v/3.6/notes-on-mule-3.0-schema-changes[Notes on Mule 3.0 Schema Changes]
*** link:/mule-user-guide/v/3.6/mule-esb-3-and-test-api-javadoc[Mule ESB 3 and Test API Javadoc]
*** link:/mule-user-guide/v/3.6/mulesoft-security-update-policy[MuleSoft Security Update Policy]
